fix: Allowing gallery to overflow entire box

--- a/src/layouts/index/creativeteam/CreativeTeam.module.sass
+++ b/src/layouts/index/creativeteam/CreativeTeam.module.sass
@@ -18,7 +18,6 @@
         width: 100%
 
         .member
-            position: relative
             flex-grow: 1
             flex-shrink: 1
             flex-basis: 0
